--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,3 +15,7 @@ jobs:
           java-version: 1.8
       - name: Run CI
         run: make ci
+      - name: Upload coverage data
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODE_COV_UPLOAD_TOKEN }}
+        run: bash <(curl -s https://codecov.io/bash)
