--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,7 +15,11 @@ jobs:
           java-version: 1.8
       - name: Run CI
         run: make ci
-      - name: Upload coverage data
+      - name: Upload CodeCov
         env:
           CODECOV_TOKEN: ${{ secrets.CODE_COV_UPLOAD_TOKEN }}
-        run: bash <(curl -s https://codecov.io/bash)
+        run: make codecov
+      - name: Upload SonarCloud
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_UPLOAD_TOKEN }}
+        run: make sonar
