Add Github token when uploading sonar data

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,4 +22,5 @@ jobs:
       - name: Upload SonarCloud
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_UPLOAD_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make sonar
