--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,7 +15,7 @@ jobs:
           java-version: 1.8
       - name: Run CI
         run: make ci
-      - name: Upload CodeCov
+      - name: Upload Codacy
         env:
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_UPLOAD_TOKEN }}
         run: make codacy
