--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,16 +15,8 @@ jobs:
           java-version: 1.8
       - name: Run CI
         run: make ci
-      - name: Upload Codacy
+      - name: Upload SonarCloud
         env:
-          CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_UPLOAD_TOKEN }}
-        run: make codacy
-#      - name: Upload CodeCov
-#        env:
-#          CODECOV_TOKEN: ${{ secrets.CODE_COV_UPLOAD_TOKEN }}
-#        run: make codecov
-#      - name: Upload SonarCloud
-#        env:
-#          SONAR_TOKEN: ${{ secrets.SONAR_UPLOAD_TOKEN }}
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        run: make sonar
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: make sonar
